--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "algolia-index-transform": "^1.0.6",
     "algoliasearch": "^3.24.9"
   }
 }
